implement Unsafe.getUnsafe() in jdk8u